# oxidec

./: Cargo.toml  README.md  build.rs  flake.nix  module.nix
.github/workflows/: rust.yml
examples/colorschemes/: catppuccin.json  everblush.json  gruvbox.json  nord.json  paraiso.json  rose-pine.json  solarized.json
examples/reloaders/: 0-xrdb.sh  4-qutebrowser.sh  5-termux.sh  6-themix.sh  7-gtk.sh  qtile.sh  qutebrowser.sh  terminals.sh  tty.sh
examples/templates/: colors-qutebrowser.yml  colors-themix  colors-tty.sh  colors.Xresources  colors.json  colors.termux
nix/: module.nix  types.nix
src/: config.rs  logger.rs  main.rs
src/cache/: mod.rs  status.rs  templates.rs
src/colorscheme/: args.rs  blocks.rs  mod.rs  reloaders.rs  schema.rs  templates.rs
src/colorscheme/commands/: import.rs  list.rs  mod.rs  remove.rs  set.rs  status.rs
src/colorscheme/commands/generate/: mod.rs
src/colorscheme/commands/generate/backends/: imagemagick.rs  mod.rs
src/state/: args.rs  mod.rs  schema.rs
src/state/commands/: list.rs  mod.rs  remove.rs  save.rs  set.rs
src/theme/: args.rs  mod.rs  schema.rs
src/theme/commands/: create.rs  list.rs  mod.rs  new.rs  remove.rs  save.rs  set.rs  tw.rs
src/theme/commands/tw/: mod.rs
src/wallpaper/: args.rs  mod.rs  set.rs
src/wallpaper/commands/: add.rs  list.rs  mod.rs  remove.rs  set.rs  status.rs
