[package]
name = "oxidec"
version = "0.1.0"
edition = "2021"
description = "Eye-candy manager written in Rust"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/oxidec/"

[dependencies]
ansi_term = "0.12.1"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
structopt = "0.3.26"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
upon = "0.6.0"
