[package]
name = "oxidec"
version = "0.3.6"
edition = "2021"
description = "Eye-candy manager written in Rust"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/oxidec/"
keywords = ["colorscheme", "wallpaper", "theme", "linux", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cli-logger = "0.1"
colorsys = "0.6"
file-format = "0.24"
home = "0.5"
lazy_static = "1.4.0"
log = "0.4"
nu-ansi-term = "0.50"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive", "strum_macros"] }
upon = "0.8"
which = "6.0"

[features]
new-examples = []
